Fix some label alignment issues and burn copy.

--- a/scss/partials/_d3_chart.scss
+++ b/scss/partials/_d3_chart.scss
@@ -30,7 +30,6 @@ div.composed-section {
     div.chart-labels {
       padding-left: 10px;
       padding-right: 10px;
-      text-align: center;
     }
 
     div.chart-value, div.chart-label {
